Prevent images from being selected on mobile

--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,7 @@ a {
 @media (hover: none) {
   img {
     pointer-events: none;
+    user-select: none;
   }
 }
 
